--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ rvm:
 
 script:
   - bundle install
+  - gem build mrwolf.gemspec
+  - gem install ./mrwolf-0.0.0.gem
   - ruby test/test_packager.rb
